--- a/WebAppService/appsettings.json
+++ b/WebAppService/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-VU39D0Q;Database=WebApp;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-VU39D0Q;Database=WebMedical;Trusted_Connection=True;TrustServerCertificate=True"
   },
     "AllowedHosts": "*"
 }
