--- a/WebAppService/WebAppService.csproj
+++ b/WebAppService/WebAppService.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Views\Shared\horizontal\" />
+    <Folder Include="wwwroot\FilesUploads\" />
   </ItemGroup>
 
   <ItemGroup>
