--- a/WebAppService/appsettings.json
+++ b/WebAppService/appsettings.json
@@ -5,8 +5,8 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-VU39D0Q;Database=WebMedical;Trusted_Connection=True;TrustServerCertificate=True"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=ANHPHAMVIET\\SQLEXPRESS;Database=WebMedical;Trusted_Connection=True;TrustServerCertificate=True"
+    },
     "AllowedHosts": "*"
 }
