--- a/WebAppService/WebAppService.csproj
+++ b/WebAppService/WebAppService.csproj
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\Admin\Data\**" />
     <Compile Remove="wwwroot\assets\libs\datatables.net-bs5\node_modules\**" />
+    <Content Remove="Areas\Admin\Data\**" />
     <Content Remove="wwwroot\assets\libs\datatables.net-bs5\node_modules\**" />
+    <EmbeddedResource Remove="Areas\Admin\Data\**" />
     <EmbeddedResource Remove="wwwroot\assets\libs\datatables.net-bs5\node_modules\**" />
+    <None Remove="Areas\Admin\Data\**" />
     <None Remove="wwwroot\assets\libs\datatables.net-bs5\node_modules\**" />
   </ItemGroup>
 
@@ -31,7 +35,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Views\Shared\horizontal\" />
     <Folder Include="wwwroot\FilesUploads\" />
   </ItemGroup>
