--- a/WebAppService/appsettings.json
+++ b/WebAppService/appsettings.json
@@ -1,12 +1,15 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=103.172.79.113,1434;Database=WebMedical;User Id=sa;Password=Admin123;TrustServerCertificate=True"
   },
-    "AllowedHosts": "*"
+  "AllowedDomains": [
+    "*"
+  ],
+  "AllowedHosts": "*"
 }
